# codec-vo-aacenc

./: CMakeLists.txt  README.md  library.properties
examples/EncodeSineToAAC/: EncodeSineToAAC.ino
src/: VOAACEncoder.h
src/vo-aacenc/: cmnMemory.c
